﻿<h3>Cloud</h3>
<p class="Contributor">
	nBrane, llc <br />
	<a href="mailto:support@nbrane.com">support@nbrane.com</a><br />
	<a href=http://www.nbrane.com>http://www.nbrane.com</a><br />
</p>
<hr/>
<div class="License">
	<h3>About the nBrane: Administration Suite</h3>

	<p class="Owner">
		<b>Version v0.0.1</b> - 3/23/2016<br /><br />
	</p>
	<h4>Initial Prototype</h4>
	<ul>
		<li>basic module, page and user management functionality</li>
	</ul>
</div>