@@ -173,4 +173,13 @@ $(document).ready(function () {
         var koViewModel = new nBraneAdminSuiteMainViewModel();
         ko.applyBindings(koViewModel, nBraneAdminSuiteNode);
     }
+	
+	$(".nbr-upper-control-panel li").hover(
+	function() {
+		var targetWidth = $(this).children('span').outerWidth() +30;
+		console.log(targetWidth)
+		$(this).animate({width:targetWidth}, 350);
+	},function() {
+		$(this).animate({width:'20px'}, 50);
+	});
 });
