@@ -13,7 +13,7 @@
 		<ul>
 			<li>
 				<label>Title:</label>
-				<input data-bind="value: ModuleTitle" />
+				<input data-bind="hasFocus: FocusOnTitle, value: ModuleTitle" />
 			</li>
 			<li>
 				<label>Visibility:</label>
